k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fincra-app-service
  namespace: default
  labels:
    app: fincra-app
spec:
  type: ClusterIP
  selector:
    app: fincra-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  sessionAffinity: None
